<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".gameConfig.secondaries.SecondariesFragment">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_p1_sec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/secondary_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </com.google.android.material.button.MaterialButton>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_p1_sec1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/btn_p1_sec"
            app:layout_constraintStart_toStartOf="@+id/btn_p1_sec"
            app:layout_constraintTop_toBottomOf="@id/btn_p1_sec">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_p1_sec1_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Title">

                </TextView>

                <TextView
                    android:id="@+id/txt_p1_sec1_cat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Category">

                </TextView>

                <TextView
                    android:id="@+id/txt_p1_sec1_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Type">

                </TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_p1_sec2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/secondary_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_p1_sec1">

        </com.google.android.material.button.MaterialButton>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_p1_sec2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/btn_p1_sec2"
            app:layout_constraintStart_toStartOf="@+id/btn_p1_sec2"
            app:layout_constraintTop_toBottomOf="@id/btn_p1_sec2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_p1_sec2_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Title">

                </TextView>

                <TextView
                    android:id="@+id/txt_p1_sec2_cat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Category">

                </TextView>

                <TextView
                    android:id="@+id/txt_p1_sec2_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Type">

                </TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_p1_sec3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/secondary_3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_p1_sec2">

        </com.google.android.material.button.MaterialButton>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_p1_sec3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/btn_p1_sec3"
            app:layout_constraintStart_toStartOf="@+id/btn_p1_sec3"
            app:layout_constraintTop_toBottomOf="@id/btn_p1_sec3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_p1_sec3_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Title">

                </TextView>

                <TextView
                    android:id="@+id/txt_p1_sec3_cat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Category">

                </TextView>

                <TextView
                    android:id="@+id/txt_p1_sec3_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Type">

                </TextView>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <View
            android:id="@+id/divider2"
            android:layout_width="1dp"
            android:layout_height="729dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_p2_sec3"
            app:layout_constraintStart_toEndOf="@+id/btn_p1_sec3"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_p2_sec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/secondary_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </com.google.android.material.button.MaterialButton>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_p2_sec1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/btn_p2_sec"
            app:layout_constraintStart_toStartOf="@+id/btn_p2_sec"
            app:layout_constraintTop_toBottomOf="@id/btn_p2_sec">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_p2_sec1_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Title">

                </TextView>

                <TextView
                    android:id="@+id/txt_p2_sec1_cat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Category">

                </TextView>

                <TextView
                    android:id="@+id/txt_p2_sec1_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Type">

                </TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_p2_sec2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/secondary_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_p2_sec1">

        </com.google.android.material.button.MaterialButton>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_p2_sec2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/btn_p2_sec2"
            app:layout_constraintStart_toStartOf="@+id/btn_p2_sec2"
            app:layout_constraintTop_toBottomOf="@id/btn_p2_sec2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_p2_sec2_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Title">

                </TextView>

                <TextView
                    android:id="@+id/txt_p2_sec2_cat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Category">

                </TextView>

                <TextView
                    android:id="@+id/txt_p2_sec2_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Type">

                </TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_p2_sec3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/secondary_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_p1_sec2">

        </com.google.android.material.button.MaterialButton>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_p2_sec3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/btn_p2_sec3"
            app:layout_constraintStart_toStartOf="@+id/btn_p2_sec3"
            app:layout_constraintTop_toBottomOf="@id/btn_p2_sec3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_p2_sec3_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Title">

                </TextView>

                <TextView
                    android:id="@+id/txt_p2_sec3_cat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Category">

                </TextView>

                <TextView
                    android:id="@+id/txt_p2_sec3_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Type">

                </TextView>
            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>